--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "suri-crawl",
+  "name": "crawlmapper",
   "version": "1.0.0",
   "type": "module",
   "description": "A sitemap content search tool that crawls sitemaps and searches for specific terms in webpage content",
