--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "crawlmapper",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "description": "A sitemap content search tool that crawls sitemaps and searches for specific terms in webpage content",
   "main": "index.js",
+  "author": "Jorge Epuñan <juanbrujo@gmail.com>",
+  "keywords": ["sitemap", "web-scraping", "content-search", "crawler"],
+  "license": "ISC",
   "scripts": {
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage"
   },
-  "keywords": ["sitemap", "web-scraping", "content-search", "crawler"],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.13.2",
     "xml2js": "^0.6.2"
