--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "author": "Jorge Epuñan <juanbrujo@gmail.com>",
   "keywords": ["sitemap", "web-scraping", "content-search", "crawler"],
   "license": "ISC",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "test": "vitest",
     "test:run": "vitest run",
