feat: production-ready release with Netlify Functions
- Implement direct Netlify Function URLs for reliable API calls
- Fix static asset loading with absolute paths
- Add comprehensive deployment documentation
- Enhance UI with cyberpunk animations and GitHub icon
- Resolve all redirect and routing issues
- Update semantic versioning to 2.2.0

Deployment ready for:
✅ Netlify Functions (full functionality)
✅ GitHub Pages (demo mode)
✅ Local development

--- a/netlify.toml
+++ b/netlify.toml
@@ -14,6 +14,11 @@
 
 # API Redirect to Netlify Functions (must be before catch-all)
 [[redirects]]
+  from = "/api/search"
+  to = "/.netlify/functions/search"
+  status = 200
+
+[[redirects]]
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
