feat(build): add production build system and Agents.md documentation
- Create build.js script that removes console.log and comments while preserving console.error
- Add terser dependency for JavaScript minification
- Update package.json with build script and integrate with release process
- Add Agents.md with comprehensive documentation of all project agents
- Update .versionrc to run build before version bumping
- Update SEMVER.md with build process documentation

--- a/.versionrc
+++ b/.versionrc
@@ -4,5 +4,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/juanbrujo/CrawlMapper.git"
+  },
+  "scripts": {
+    "prebump": "npm run build"
   }
 }
