--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "release:minor": "standard-version --release-as minor",
     "release:patch": "standard-version --release-as patch",
     "release:major": "standard-version --release-as major",
+    "build": "node build.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "format": "prettier --write .",
@@ -49,6 +50,7 @@
     "netlify-cli": "^17.0.0",
     "prettier": "^3.7.4",
     "standard-version": "^9.5.0",
+    "terser": "^5.44.1",
     "vitest": "^1.0.0"
   },
   "commitlint": {
